--- a/naglowek-zadanie-domowe/css/responsive.css
+++ b/naglowek-zadanie-domowe/css/responsive.css
@@ -1,22 +1,46 @@
-/*
 
 @media screen and (min-width:1170px) { 
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
         
     }
 
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 993px) and (max-width: 1170px){
+    header > div#background-foto {
+    background-image: url(../img/man-2.jpg);
+    height: 70vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    }
     
+    .text {
+    color: white;
+    }
     
+    .h1 {
+    top: 10%;
+}
+
+    .h2 {
+    top: 5%;
 }
 
 @media screen and (max-width: 992px) {
-    
-    
-}
-
-
-.box {
-        display: none;
+    body {
+        overflow-y: auto;
     }
-*/
+    
+    header > div#background-foto {
+    height: 20%;
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+    }
+    
+
+
+
