--- a/naglowek-zadanie-domowe/css/style.css
+++ b/naglowek-zadanie-domowe/css/style.css
@@ -3,20 +3,25 @@ body {
     margin: 0;
     padding: 0;
     overflow-y: hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .text {
     position: absolute;
     left: 5%;
     color: white;
+    
 }
 
 .h1 {
     top: 55%;
+    font-size: 1,5em;
 }
 
 .h2 {
-    top: 50%;
+    top: 45%;
+    font-size: 1,3em;
 }
 
 header > div#background-foto {
