--- a/naglowek-zadanie-domowe/css/responsive.css
+++ b/naglowek-zadanie-domowe/css/responsive.css
@@ -6,18 +6,18 @@
 
     .text {
         color: black;
+        display: inline-block;
         position: absolute;
         text-align: center;
+        width: 100%;
     }
-
+    
     .h1 {
         top: 57%;
-        left: 40%;
     }
 
     .h2 {
         top: 50%;
-        left: 50%;
     }
 }
 
