usuniecie odsuniecia od lewej dla najmniejszej rozdzielczosci

--- a/naglowek-zadanie-domowe/css/responsive.css
+++ b/naglowek-zadanie-domowe/css/responsive.css
@@ -9,6 +9,7 @@
         display: inline-block;
         position: absolute;
         text-align: center;
+        left: 0;
         width: 100%;
     }
     
