--- a/Or-Bi Mechanik/style.css
+++ b/Or-Bi Mechanik/style.css
@@ -1,8 +1,11 @@
+
+
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #F8F9FA;
-    color: #1F1D1C;
+    color: #1f1d1c;
     margin: 0;
+    font-size: 16px;
     }
 
 #main-nav, #main-nav.scroll {
@@ -10,23 +13,23 @@ body {
 	}
 
 #phone-contact {
-    width: 60%;
     float: left;
-    padding: 0.625rem;
+    /* padding: 0.625rem; */
     }
 
-#phone-contact > a:hover {
+a {
+    text-decoration: none;
+    color: #1F1D1C;
+    }
+   
+a:hover {
     color: #EE3816;
+    text-decoration: none;
     }
 
 .icon-color {
     color: #EE3816;
     padding: 0.3125rem;
-    }
-
-#phone-contact > a {
-text-decoration: none;
-color: #1F1D1C;
     }
 
 #nav-link-style1,
@@ -49,7 +52,7 @@ color: #1F1D1C;
     color: white;
     display: flex;
 	align-items: center;
-	justify-content: center;
+    justify-content: center;
     }
 
 .section-header {
@@ -74,7 +77,7 @@ h3 {
 
 .icon {
     height: 9.375rem;
-    width: 12rem;
+    width: 100%;
     font-size: 5rem;
     color: #332D2D;
     text-align: center;
@@ -83,22 +86,15 @@ h3 {
     align-items: center;
     }
 
-
 .icon-text {
     color:  #EE3816;
     text-align: center;
     height: 3.75rem;
-    width: 12rem;
+    width: 100%;
     margin-bottom: 1.25rem;
     font-size: 0.9375rem;
     font-weight: bold;
     }
-
-/* #icons-container {
-display: block;
-margin: 0 auto;
-background-color: RED;
-    } */
 
 #adress-content {
     align-items: center;
@@ -118,7 +114,7 @@ background-color: RED;
     margin-bottom: 1.25rem;
     }
 
-.adress-content span {
+span {
     font-weight: bold;
     }
 
@@ -145,7 +141,8 @@ background-color: RED;
 	height: 13.75rem;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+    justify-content: space-between;
+    padding-bottom: 0.625rem;
     }
 
 #contact input,
@@ -178,12 +175,22 @@ background-color: RED;
 	color: #EE3816;
     }
 
-#footer-style {
+#copyright-style {
     font-size: 0.875rem;
-    padding: 0.5rem;
+    padding: 1rem;
     margin: 0;
 }
 
+.privacy-style {
+    font-size: 0.875rem;
+    margin: 0;
+    padding: 1rem;
+    float: right;
+}
+
+.privacy {
+    font-size: 14px;
+}
 
 @media all and (max-width: 992px) {
 	#main-nav .nav-item {
@@ -191,7 +198,10 @@ background-color: RED;
 		padding: 10px 0;
 		border-top: 1px solid rgba(119, 119, 119, 0.5);
     }
+
+    #copyright-style,
+    .privacy-style {
+    float: none;
+    }
     
 }
-
-
