--- a/NeuronS - GitHub/css/style.css
+++ b/NeuronS - GitHub/css/style.css
@@ -25,6 +25,9 @@ body {
   font-family: 'Muli', sans-serif;
   font-size: 13px; }
 
+.navbar-dark .navbar-nav .nav-link {
+  color: #dadada; }
+
 .main-nav1 {
   background-color: #0e0e0e;
   height: 50px; }
@@ -148,3 +151,13 @@ div#copyright {
   #scroll-button i {
     color: #2a80f8;
     font-size: 12px; }
+
+@media all and (max-width: 992px) {
+  .to-hide {
+    visibility: hidden; } }
+
+@media all and (max-width: 992px) {
+  .article-text {
+    width: 100%;
+    height: 400px;
+    padding: 150px 2px 150px 2px; } }
