--- a/NeuronS - GitHub/sass/main.scss
+++ b/NeuronS - GitHub/sass/main.scss
@@ -67,8 +67,12 @@ body {
 
 // nav1
 
+.navbar-dark .navbar-nav .nav-link {
+    color: $primary-light-color;
+
+}
 .main-nav1 {
-    background-color: $primary-dark-color;
+    background-color:$primary-dark-color;
     height: 50px;
 
     .nav-link-style {
@@ -104,10 +108,6 @@ body {
         }
     }
 }
-
-
-
-
 
 
 // nav2
@@ -283,3 +283,20 @@ div#copyright {
         font-size: 12px;   
     }
 };
+
+@media all and (max-width: 992px) {
+
+    .to-hide {
+        visibility: hidden;
+    }
+
+}
+
+@media all and (max-width: 992px) {
+
+    .article-text {
+        width: 100%;
+        height: 400px;
+        padding: 150px 2px 150px 2px;
+    }
+}
