--- a/NeuronS - GitHub/css/style.css
+++ b/NeuronS - GitHub/css/style.css
@@ -36,13 +36,14 @@ body {
   .main-nav1 a {
     color: #dadada; }
   .main-nav1 .search-input {
-    background-image: linear-gradient(to right bottom, #151515, #151515);
+    /* background-image: linear-gradient(to right bottom, #151515, #151515); */
     border-radius: 0.3125rem;
     background-position: left;
     border: none;
-    width: 100px; }
+    width: 100px;
+    }
     .main-nav1 .search-input:hover, .main-nav1 .search-input:focus {
-      background-image: linear-gradient(to right bottom, #dadada, #dadada), url(../img/loopka.png);
+      //background-image: linear-gradient(to right bottom, #dadada, #dadada), url(../img/loopka.png);
       border: none;
       width: 100px; }
 
@@ -161,3 +162,12 @@ div#copyright {
     width: 100%;
     height: 400px;
     padding: 150px 2px 150px 2px; } }
+
+.hide-when-search {
+  z-index: 20;
+}
+
+.input[name="search"] {
+  z-index: 25;
+  position: absolute;
+}
