--- a/NeuronS - GitHub/css/style.css
+++ b/NeuronS - GitHub/css/style.css
@@ -3,18 +3,6 @@
   padding: 0;
   box-sizing: border-box; }
 
-@keyframes rotate-img-left {
-  0% {
-    transform: rotate(15deg); }
-  100% {
-    transform: rotate(360deg); } }
-
-@keyframes rotate-img-right {
-  0% {
-    transform: rotate(-15deg); }
-  100% {
-    transform: rotate(360deg); } }
-
 @keyframes header-animate {
   0% {
     clip-path: polygon(0 0, 100% 0, 100% 70%, 25% 100%, 0 70%); }
@@ -52,15 +40,13 @@ body {
 .dropdown-menu li:hover {
   background-color: #151515; }
 
-nav2
 .navbar-expand-sm .navbar-nav .nav-link {
   padding-right: 1.25rem !important;
   padding-left: 1.25rem !important;
   padding-bottom: 1rem;
   color: #dedede;
   border-bottom: solid 2px #151515; }
-  nav2
-.navbar-expand-sm .navbar-nav .nav-link:hover {
+  .navbar-expand-sm .navbar-nav .nav-link:hover {
     border-bottom: solid 2px #2a80f8; }
 
 img#logo-main-nav {
@@ -116,8 +102,10 @@ img#logo-main-nav {
     border-radius: 10%;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5); }
   .section-container .section-img-left {
+    transform: rotate(15deg);
     margin-left: -50px; }
   .section-container .section-img-right {
+    transform: rotate(-15deg);
     margin-right: -50px; }
   .section-container .animate-left {
     animation: rotate-img-left 100s linear infinite; }
@@ -175,3 +163,17 @@ div#copyright {
 @media all and (max-width: 992px) {
   .to-hide {
     display: none; } }
+
+@media all and (max-width: 992px) {
+  .main-nav1 .nav-item {
+    text-align: center; }
+  .dropdown .dropdown-menu a.nav-link {
+    text-align: center;
+    padding: 8px 0;
+    border-top: 1px solid rgba(119, 119, 119, 0.5); }
+  .section-container .article-text {
+    padding: 20px 2px 20px 50px;
+    margin-top: 40px; }
+  .section-container img {
+    width: 50vw;
+    height: 50vw; } }
