--- a/NeuronS - GitHub/sass/main.scss
+++ b/NeuronS - GitHub/sass/main.scss
@@ -11,11 +11,6 @@ $text-color: #393939;
 $logo-dark-color:#0e196e;
 $logo-light-color: #2a80f8;
 
-@mixin section-img-style {
-    width: 400px;
-    height: 400px;
-    border-radius: 10%;
-}
 
 @mixin nav2-row-style{
     height: 100%;
@@ -23,23 +18,23 @@ $logo-light-color: #2a80f8;
     padding: 7px 0px 14px 0px;
 }
 
-@keyframes rotate-img-left {
-    0% {
-        transform: rotate(15deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
+// @keyframes rotate-img-left {
+//     0% {
+//         transform: rotate(15deg);
+//     }
+//     100% {
+//         transform: rotate(360deg);
+//     }
+// }
 
-@keyframes rotate-img-right {
-    0% {
-        transform: rotate(-15deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
-}
+// @keyframes rotate-img-right {
+//     0% {
+//         transform: rotate(-15deg);
+//     }
+//     100% {
+//         transform: rotate(360deg);
+//     }
+// }
 
 
 @keyframes header-animate {
@@ -106,7 +101,7 @@ body {
     background-color: $secondary-dark-color;
 
 }
-nav2
+
 
 .navbar-expand-sm .navbar-nav .nav-link {
     padding-right: 1.25rem !important;
@@ -200,17 +195,19 @@ img#logo-main-nav {
     }
 
     img {
-        @include section-img-style;
+        width: 400px;
+        height: 400px;
+        border-radius: 10%;
         box-shadow: 0 0.5rem 1rem rgba(0,0,0, 0.50) 
     }
 
     .section-img-left {
-        // transform: rotate(15deg);
+        transform: rotate(15deg);
         margin-left: -50px;
     }
 
     .section-img-right {
-        // transform: rotate(-15deg);
+        transform: rotate(-15deg);
         margin-right: -50px;
     }
 
@@ -307,11 +304,31 @@ div#copyright {
 
 }
 
-// @media all and (max-width: 992px) {
+@media all and (max-width: 992px) {
+	.main-nav1 .nav-item {
+        text-align: center;
+        border-bottom: solid 2px $logo-light-color;
+        }  
+		// padding: 8px 0;
+		// border-top: 1px solid rgba(119, 119, 119, 0.5);
+    }
 
-//     .article-text {
-//         width: 100%;
-//         height: 400px;
-//         padding: 150px 2px 150px 2px;
-//     }
-// }
+    .dropdown .dropdown-menu a.nav-link {
+        text-align: center;
+		padding: 8px 0;
+		border-top: 1px solid rgba(119, 119, 119, 0.5);
+    }
+    
+    .section-container {
+    
+        .article-text {
+                padding: 20px 2px 20px 50px;
+                margin-top: 40px;
+        }
+        img {
+    width: 50vw;
+    height: 50vw;
+        }
+    }
+}
+
