--- a/NeuronS - GitHub/css/protean.css
+++ b/NeuronS - GitHub/css/protean.css
@@ -44,3 +44,7 @@
     shape-inside: polygon(0 0, 100% 0, 100% 100%, 25% 100%, 0 100%);
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 25% 100%, 0 100%);
 }
+
+#nav2 {
+    margin-top: 50px;
+}
