--- a/NeuronS - GitHub/scripts/style.css
+++ b/NeuronS - GitHub/scripts/style.css
@@ -3,6 +3,18 @@
   padding: 0;
   box-sizing: border-box; }
 
+@keyframes rotate-img-left {
+  0% {
+    transform: rotate(15deg); }
+  100% {
+    transform: rotate(360deg); } }
+
+@keyframes rotate-img-right {
+  0% {
+    transform: rotate(-15deg); }
+  100% {
+    transform: rotate(360deg); } }
+
 @keyframes header-animate {
   0% {
     clip-path: polygon(0 0, 100% 0, 100% 70%, 25% 100%, 0 70%); }
@@ -13,67 +25,43 @@ body {
   font-family: 'Muli', sans-serif;
   font-size: 13px; }
 
-.margin-top-style {
-  margin-top: 4px; }
-
 .navbar-dark .navbar-nav .nav-link {
   color: #dadada; }
-  .navbar-dark .navbar-nav .nav-link i {
-    font-size: 13px; }
 
 .main-nav1 {
-  background-color: #0e0e0e; }
-  .main-nav1 .nav-link-style i {
-    margin: 15px;
-    font-size: 13px; }
-
-.dropdown-menu {
-  min-width: 1rem;
   background-color: #0e0e0e;
-  color: #dadada;
-  font-size: 13px;
-  font-family: 'Muli', sans-serif;
-  padding-bottom: 0px;
-  padding-top: 0px;
-  border: 0; }
+  height: 50px; }
+  .main-nav1 .nav-link-style i {
+    margin: 15px; }
+  .main-nav1 a {
+    color: #dadada; }
+  .main-nav1 .search-input {
+    background-image: linear-gradient(to right bottom, #151515, #151515);
+    border-radius: 0.3125rem;
+    background-position: left;
+    border: none;
+    width: 100px; }
+    .main-nav1 .search-input:hover, .main-nav1 .search-input:focus {
+      background-image: linear-gradient(to right bottom, #dadada, #dadada), url(../img/loopka.png);
+      border: none;
+      width: 100px; }
 
-.dropdown-menu li:hover {
-  background-color: #151515; }
-
-.navbar-expand-sm .navbar-nav .nav2-link-style {
-  padding-right: 1.25rem !important;
-  padding-left: 1.25rem !important;
-  padding-bottom: 1rem;
-  color: #dedede;
-  border-bottom: solid 2px #151515; }
-  .navbar-expand-sm .navbar-nav .nav2-link-style:hover {
-    border-bottom: solid 2px #2a80f8; }
-
-img#logo-main-nav {
-  width: 30px;
-  margin-right: 15px;
-  margin-top: 0; }
-
-.search-input {
-  background-color: #dadada;
-  border-radius: 0.35rem;
-  width: 100%;
-  height: 25px; }
-
-#nav2 {
+.nav2 {
   background-color: #151515;
-  padding-bottom: 0; }
-  #nav2 .nav2-container-style {
+  height: 50px; }
+  .nav2 .nav2-container-style {
     height: 100%;
     text-align: center;
     padding: 7px 0px 14px 0px; }
-    #nav2 .nav2-container-style .nav2-row-style {
+    .nav2 .nav2-container-style .nav2-row-style {
       height: 100%;
       text-align: center;
       padding: 7px 0px 14px 0px; }
-      #nav2 .nav2-container-style .nav2-row-style .border-style:hover {
-        border-bottom: solid 2px #2a80f8; }
-  #nav2 a {
+      .nav2 .nav2-container-style .nav2-row-style .border-style {
+        height: 36px; }
+        .nav2 .nav2-container-style .nav2-row-style .border-style:hover {
+          border-bottom: solid 2px #2a80f8; }
+  .nav2 a {
     text-decoration: none;
     color: #dadada; }
 
@@ -85,36 +73,36 @@ img#logo-main-nav {
   color: white;
   clip-path: polygon(0 0, 100% 0, 100% 70%, 25% 100%, 0 70%); }
   #main-header .header-caption {
-    padding-left: 100px;
-    position: fixed; }
+    padding-left: 100px; }
     #main-header .header-caption img {
       height: 130px;
-      margin: 75px 0 20px 0; }
+      margin: 50px 0 50px 0; }
     #main-header .header-caption .header-text-container {
-      width: 50%; }
+      width: 35%; }
       #main-header .header-caption .header-text-container h1 {
         font-size: 3.5em;
-        margin-bottom: 25px; }
+        margin: 20px 0; }
 
 .section-container {
-  padding: 50px 0 50px 0;
+  padding: 100px 0 100px 0;
   width: 100%;
   overflow-x: hidden; }
-  .section-container .img-container {
-    margin-top: 50px;
-    height: 400px; }
+  .section-container .section-row-style {
+    padding-bottom: 50px;
+    margin: 0; }
   .section-container img {
-    width: 350px;
-    height: 350px;
+    width: 400px;
+    height: 400px;
     border-radius: 10%;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5); }
   .section-container .section-img-left {
-    transform: rotate(15deg);
     margin-left: -50px; }
   .section-container .section-img-right {
-    transform: rotate(-15deg);
-    margin-right: -50px;
-    margin-left: 80px; }
+    margin-right: -50px; }
+  .section-container .animate-left {
+    animation: rotate-img-left 100s linear infinite; }
+  .section-container .animate-right {
+    animation: rotate-img-right 100s linear infinite reverse; }
   .section-container .article-text {
     width: 60%;
     height: 400px;
@@ -134,14 +122,14 @@ footer .footer-link {
   padding-left: 0.85rem !important;
   color: #393939; }
   footer .footer-link:hover, footer .footer-link:focus {
-    color: #2a80f8;
-    text-decoration: none; }
+    color: #393939;
+    text-decoration-color: #2a80f8; }
 
-footer .navbar-light .navbar-nav .footer-link-1 {
+footer .footer-link-1 {
   color: #393939; }
-  footer .navbar-light .navbar-nav .footer-link-1:hover, footer .navbar-light .navbar-nav .footer-link-1:focus {
-    color: #2a80f8;
-    text-decoration: none; }
+  footer .footer-link-1:hover, footer .footer-link-1:focus {
+    color: #393939;
+    text-decoration-color: #2a80f8; }
 
 div#copyright {
   height: 1.75rem;
@@ -166,51 +154,46 @@ div#copyright {
 
 @media all and (max-width: 992px) {
   .to-hide {
-    display: none; } }
+    visibility: hidden; } }
 
 @media all and (max-width: 992px) {
-  .main-nav1 .nav-item {
-    text-align: center; }
-  #main-header .header-caption {
-    padding-left: 70px;
-    position: fixed; }
-    #main-header .header-caption img {
-      height: 100px;
-      margin: 50px 0 20px 0; }
-    #main-header .header-caption .header-text-container {
-      width: 70%; }
-      #main-header .header-caption .header-text-container h1 {
-        font-size: 2.5em;
-        margin-bottom: 20px; }
-  .section-container .article-text {
-    padding: 10px 50px 10px 50px;
-    margin-top: 40px;
-    margin-right: 0;
-    margin-left: 0;
+  .article-text {
     width: 100%;
-    text-align: center;
-    height: 250px; }
-  .section-container .img-container {
-    margin-top: 40px;
-    height: 250px; }
-  .section-container img {
-    width: 50vw;
-    height: 50vw; }
-  .section-container .section-img-right {
-    margin-left: 220px; }
-  .dropdown .dropdown-menu a.nav-link {
-    text-align: center;
-    padding: 8px 0;
-    border-top: 1px solid rgba(119, 119, 119, 0.5); } }
+    height: 400px;
+    padding: 150px 2px 150px 2px; } }
+
+.text {
+    position: relative;
+    font-size: 14px;
+    color: black;
+    
+}
+
+.text-concat {
+    position: relative;
+    display: inline-block;
+    word-wrap: break-word;
+    overflow: hidden;
+    max-height: 4.3em; /* (Number of lines you want visible) * (line-height) */
+    line-height: 1.2em;
+    text-align: justify;
+}
+
+.text.ellipsis::after {
+    content: "...";
+    position: absolute;
+    right: -12px;
+    bottom: 4px;
+}
+
+/* Right and bottom for the psudo class are px based on various factors, font-size etc... Tweak for your own needs. */
 .card-title {
     margin-bottom: .01rem;
 }
-
 p {
     margin-top: 0px;
     margin-bottom: 0rem;
 }
-
 .card-body {
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
@@ -229,5 +212,5 @@ p {
     background-clip: border-box;
     border: 0px solid rgba(0,0,0,.125);
     border-radius: .25rem;
-    text-align: justify;
-}
+	text-align: justify;
+	}
