--- a/NeuronS - GitHub/css/style.css
+++ b/NeuronS - GitHub/css/style.css
@@ -63,7 +63,7 @@ img#logo-main-nav {
   width: 100%;
   height: 25px;
   margin-top: 7px;
-  margin-right: 330px;
+  padding-right: 330px;
   border: 1px solid #151515;
   color: #dadada;
   padding-left: 10px; }
