--- a/NeuronS - GitHub/czcionki fontello/css/fontello-codes.css
+++ b/NeuronS - GitHub/czcionki fontello/css/fontello-codes.css
@@ -4,6 +4,7 @@
 .icon-calendar:before { content: '\e802'; } /* '' */
 .icon-up-open:before { content: '\e803'; } /* '' */
 .icon-down-open:before { content: '\e804'; } /* '' */
+.icon-cancel:before { content: '\e805'; } /* '' */
 .icon-download:before { content: '\f02e'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
