--- a/NeuronS - GitHub/czcionki fontello/css/fontello.css
+++ b/NeuronS - GitHub/czcionki fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?46905906');
-  src: url('../font/fontello.eot?46905906#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?46905906') format('woff2'),
-       url('../font/fontello.woff?46905906') format('woff'),
-       url('../font/fontello.ttf?46905906') format('truetype'),
-       url('../font/fontello.svg?46905906#fontello') format('svg');
+  src: url('../font/fontello.eot?51946208');
+  src: url('../font/fontello.eot?51946208#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?51946208') format('woff2'),
+       url('../font/fontello.woff?51946208') format('woff'),
+       url('../font/fontello.ttf?51946208') format('truetype'),
+       url('../font/fontello.svg?51946208#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?46905906#fontello') format('svg');
+    src: url('../font/fontello.svg?51946208#fontello') format('svg');
   }
 }
 */
@@ -60,6 +60,7 @@
 .icon-calendar:before { content: '\e802'; } /* '' */
 .icon-up-open:before { content: '\e803'; } /* '' */
 .icon-down-open:before { content: '\e804'; } /* '' */
+.icon-cancel:before { content: '\e805'; } /* '' */
 .icon-download:before { content: '\f02e'; } /* '' */
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
