--- a/NeuronS - GitHub/sass/main.scss
+++ b/NeuronS - GitHub/sass/main.scss
@@ -102,6 +102,11 @@ body {
 
 }
 
+.input-close-icon i {
+    font-size: 20px;
+    color: $primary-light-color;
+}
+
 
 .navbar-expand-sm .navbar-nav .nav2-link-style {
     padding-right: 1.25rem !important;
@@ -132,7 +137,7 @@ img#logo-main-nav {
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 0.8rem;
-    width: 100%;
+    width: 330px;
     height: 25px; 
     margin-top: 7px;
     margin-right: 330px; 
