--- a/NeuronS - GitHub/css/style2.css
+++ b/NeuronS - GitHub/css/style2.css
@@ -1,6 +1,23 @@
+.card-deck {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+}
+
+.card .mb-4 {
+     margin-bottom: 1.5rem !important;
+}
+
+.card-body {
+    border-radius: 25px;
+    box-shadow: 0 0.5rem 1rem rgba(214, 197, 246, 0.50);
+}
+
+
+
 
 .card-title {
     margin-bottom: .01rem;
+    text-align: center;
 }
 
 p {
@@ -29,11 +46,12 @@ p {
     text-align: justify;
 	
 }
-.powiekszenie{
+.powiekszenie {
+    border-radius: 25px 25px 0px 0px;
     overflow: hidden;
     padding: 0;
-    
-    border:0px solid #000;
+    border: 0px solid #000;
+    border: 0px none;
 }
 .powiekszenie img {
     transition-duration: 1s;
@@ -51,12 +69,26 @@ p {
 	
 }
 
-div#duze1 {
-position: relative;
+.img-fluid {
+    border-radius: 25px 25px 0px 0px;
+    margin-bottom: 0.5rem;
 }
-h5#kr {
-opacity: 1;	
-position: absolute;
-top: 10px;
-left: 10px;
+
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+    position: relative;
+    width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+.card-deck .card {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex: 1 0 0%;
+    flex: 1 0 0%;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-right: 5px;
+    margin-bottom: 0;
+    margin-left: 5px;
 }
